# 3DViewer_v2.0

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile  index.cpp  mainpage.dox
src/controller/: controller.cpp
src/documentation/: mainpage.dox
src/logs/: RESULT_VALGRIND.txt  viewer_settings.json
src/model/: errors.cpp  errors.h  matrix.cpp  parser.cpp  parser.h  s21_matrix_oop.h
src/tests/: matrix_test.cpp  parser_test.cpp
src/view/: opengl_strategy.h  resources.qrc  scene.cpp  scene.h  settings_facade.cpp  settings_facade.h  settings_gui.cpp  settings_gui.h  viewer_widget.cpp  viewer_widget.h
src/view/gif_lib/: gifenc.h
